@@ -1,5 +1,10 @@
 2012-05-06  Helmut Eller  <heller@common-lisp.net>
 
+	* swank-sbcl.lisp (condition-timed-wait): Use the :timeout
+	argument of sb-thread:condition-wait if supported.
+
+2012-05-06  Helmut Eller  <heller@common-lisp.net>
+
 	* swank-sbcl.lisp (with-definition-source): Forgot to commit this
 	one.
 
